meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_entry__tests__empty.snap
---
source: memfaultd/src/logs/log_entry.rs
expression: entry
---
{
  "ts": "2012-04-12T17:00:00+00:00",
  "data": {}
}
