meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_entry__tests__multi_key_match.snap
---
source: memfaultd/src/logs/log_entry.rs
expression: entry
---
{
  "ts": "2012-04-12T17:00:00+00:00",
  "data": {
    "MESSAGE": "TEST",
    "PRIORITY": "6",
    "_PID": "44",
    "_SYSTEMD_UNIT": "some.service"
  }
}
